--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@ margin-bottom: 50px;
 <td><a href="http://www.andy.com/file3.xlsx">Tool 3</a></td>
 <td>Blah blah description 3</td>
 </tr>
+<tr>
+<td><a href="http://www.andy.com/file4.xlsx">Tool 2</a></td>
+<td>Blah blah description 2</td>
+</tr>
 </tbody>
 </table>
 </body>
