--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ margin-bottom: 50px;
 <tbody>
 <tr>
 <td><a href="http://www.andy.com/file1.xlsx">Tool 1</a></td>
-<td>Blah blah description. 1</td>
+<td>Blah blah description.. 1</td>
 </tr>
 <tr>
 <td><a href="http://www.andy.com/file2.xlsx">Tool 2</a></td>
