--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@ margin-top: 20px;
 <td><a href="./tools/RapidPhotointerpretationTemplate.zip">Rapid Photointerpretation Method Demo</a></td>
 <td>MS Access file and Python code for setting up a rapid photointerpretation project in MS Access, using ArcMap to prepare files. It's basically an offline, primordial version of Collect Earth (https://www.collect.earth/)</td>
 </tr>
+<tr>
+<td><a href="./tools/cjfr-2020-0509suppla.zip">Plot design simulation R scripts</a></td>
+<td> This code accompanies the plot design simulation and optimization paper found at https://www.fs.usda.gov/research/treesearch/65591. It can be used to test plot design optimality under different stand and landscape spatial heterogeneity scenarios.</td>
+</tr>
+
+
 <!-- To add new table entries, do the following. Under the "tr" above, paste the following:
 <tr>
 <td><a href=Paste link to tool you want (including quotes), e.g., "./tools/test.xlsx" if it's at the same level as the index.html in the tools directory>Paste text you want to show for the link</a></td>
