updated bold and a few other things

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ margin-top: 20px;
 </head>
 <body>
 <h1>Andrew Lister's Tech Transfer Pages</h1>
-<p>I am an afficionado of sampling statistics, remote sensing, and all things forest monitoring. I have provided the below tools in case people who work in these areas might find them useful. Please let me know (andylister100 at gmail.com) if you have any suggestions, comments, or find errors! NOTE: As of 2023, I am slowly transitioning my content to this new site, so stand by and I will be adding more of my tools and demos. </p>
+<p>I am an afficionado of sampling statistics, remote sensing, and all things forest monitoring. I have provided the below tools in case people who work in these areas might find them useful. Please let me know (andylister100 at gmail.com) if you have any suggestions, comments, or find errors! <strong>NOTE: As of 2023, I am slowly transitioning my content to this new site, so stand by and I will be adding more of my tools and demos.</strong>  </p>
 <img src="./andy.jpg" alt="Andy Lister picture">
 <table>
 <thead>
@@ -93,6 +93,6 @@ margin-top: 20px;
 </tr> -->
 </tbody>
 </table>
-<p class="disclaimer">Disclaimer: The views reflected in this video are solely my own personal views, based upon publicly available data, and do not necessarily reflect the views of the US Department of Agriculture or the United States Government.</p>
+<p class="disclaimer">Disclaimer: The views reflected on this website and methods in these tools are solely my own personal views and methods, based upon publicly available data, and do not necessarily reflect the views of the US Department of Agriculture or the United States Government.</p>
 </body>
 </html>
