update of index files.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ margin-top: 20px;
 <td> This code accompanies the plot design simulation and optimization paper found at https://www.fs.usda.gov/research/treesearch/65591. It can be used to test plot design optimality under different stand and landscape spatial heterogeneity scenarios.</td>
 </tr>
 <tr>
-    <td><a href="./tools/CEO_data_analysis_examples.zip">Collect Earth Online analysis tools.</a></td>
+    <td><a href="./tools/CEO_data_analysis_examples.zip">Collect Earth Online analysis tools</a></td>
     <td> These tools are for the analysis of Collect Earth Online (CEO)-style data to make estimates for land cover/use status and trends. The point of CEO is to create a probability sample-based estimate of land cover/use class status or trends, using high resolution imagery and ocular photointerpretation. For more information on CEO, see https://www.collect.earth/
         </td>
 
